# PyPoE

./: .flake8  .gitignore  pyproject.toml  setup.cfg  setup.py
PyPoE/: __init__.py
PyPoE/cli/: config.py  core.py  handler.py
PyPoE/cli/exporter/: __init__.py  core.py  util.py
PyPoE/cli/exporter/dat/: __init__.py  handler.py
PyPoE/cli/exporter/dat/parsers/: __init__.py  json.py
PyPoE/cli/exporter/wiki/: __init__.py  core.py  handler.py  parser.py
PyPoE/cli/exporter/wiki/admin/: unique.py
PyPoE/cli/exporter/wiki/parsers/: __init__.py  area.py  incursion.py  item.py  lua.py  mods.py  monster.py  passives.py  skill.py  warbands.py
PyPoE/poe/: constants.py  patchserver.py  path.py  text.py
PyPoE/poe/file/: bundle.py  dat.py  file_system.py  ggpk.py  idl.py  idt.py  psg.py  stat_filters.py  translations.py
PyPoE/poe/file/shared/: __init__.py  cache.py  keyvalues.py
PyPoE/poe/file/specification/: __init__.py  errors.py  fields.py
PyPoE/poe/file/specification/data/: stable.py
PyPoE/poe/file/specification/generation/: column_naming.py  custom_attributes.py  import_dat_schema.py
PyPoE/poe/sim/: formula.py  item.py  mods.py  monster.py
scripts/: convert_conf_to_py.py  make_empty_spec.py
scripts/profile/PyPoE/poe/file/: dat.py  translations.py
scripts/profile/PyPoE/ui/: dat_handler.py
tests/: conftest.py  test_data.py
tests/PyPoE/cli/exporter/wiki/: test_parser.py
tests/PyPoE/poe/: test_patchserver.py
tests/PyPoE/poe/file/: test_dat.py  test_idl.py  test_stat_filters.py  test_translations.py
tests/PyPoE/poe/sim/: test_mods.py
(+2 files in other folders)
