[tool.black]
max-line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88

[tool.poetry]
name = "pypoe"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.4"
graphviz = "^0.20"
tqdm = "^4.64.0"
mwclient = "^0.10.1"
mwparserfromhell = "^0.6.4"
rapidfuzz = "^2.0.11"
configobj = "^5.0.6"
Brotli = "^1.0.9"
fnvhash = "^0.1.0"
cffi = "^1.15.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^7.1.2"
typing-extensions = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli="PyPoE.cli.exporter.core:main"